test/hotCases/errors/events/l_valueD.js
import { valueC } from './l_exports';
export const valueD = valueC * 2;
